<resources>
    <string name="app_name">MyKasih</string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_hint">Enter your Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="registration">Registration</string>
    <string name="select_role">Select Role</string>
    <string name="donor">Donor</string>
    <string name="donee">Donee</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="title_activity_doner_home">DonerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="my_account">My Account</string>
    <string name="donate">Donate</string>
    <string name="donee_near_you">Donees near you</string>
    <string name="donate_food">Donate Food</string>
    <string name="category">Category of Food</string>
    <string-array name="sort">
        <item>Earliest to latest</item>
        <item>Latest to earliest</item>
    </string-array>
    <string-array name="categories">
        <item>Bread &amp; Pastries</item>
        <item>Fruit &amp; Vegetables</item>
        <item>Fish &amp; Poultry</item>
        <item>Cooked Food</item>
        <item>Non-perishable/ Groceries</item>
        <item>Beverage</item>
    </string-array>
    <string name="packaging">Packaging</string>
    <string-array name="packages">
        <item>Trays</item>
        <item>Trolleys</item>
        <item>Pallets</item>
        <item>Cartons</item>
        <item>Boxes</item>
    </string-array>
    <string name="contribution">Contribution &amp; Amount</string>
    <string name="unit">Units</string>
    <string name="kg">KG</string>
    <string name="rm">RM</string>
    <string name="preferred_date">Preferred Date</string>
    <string name="preferred_time">Preferred Time</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="point">Point</string>
    <string name="profile">Profile</string>
    <string name="change_pp">Change profile picture</string>
    <string name="my_donation">My Donation</string>
    <string name="my_reward">My Reward</string>
    <string name="my_redeem">My Redeem</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="view_detail">View Detail</string>
    <string name="current_point">Current Points</string>
    <string name="view_redeem">View My Redeem</string>
    <string name="hot_offers">Hot Offers</string>
    <string name="redeem">Redeem</string>
    <string name="my_claim">My Claim</string>
    <string name="donation_details">Donation Details</string>
    <string name="pickup_details">Pick-up Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="claim_donation">Claim Donation</string>
    <string name="voucher_1">Plant 100 trees in your own name</string>
    <string name="voucher_2">Donate RM 2000 worth of food for Afrika in your own name</string>
    <string name="voucher_3">Free medical consultation for one month</string>

    <string name="err_empty">Missing required field</string>
    <string name="err_name">Invalid Name</string>
    <string name="err_email">Invalid Email</string>
    <string name="duplicate_email">The email address is already in use by another account.</string>
    <string name="err_mobile">Invalid Mobile</string>
    <string name="err_address">Invalid Address</string>
    <string name="err_password">Password should be at least of 6 characters</string>
    <string name="err_unit">Invalid Unit Amount</string>
    <string name="err_kg">Invalid KG Amount</string>
    <string name="err_rm">Invalid RM Amount</string>

    <string name="tblUser">Users</string>
    <string name="uid">Uid</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="profileImage">Profile Image</string>
    <string name="timestamp">Timestamp</string>
    <string name="preference_file_key">rsd.mad.mykasih.PREFERENCE_FILE_KEY</string>
    <string name="housenum">House No.</string>
    <string name="street">Street Name</string>
    <string name="city">City</string>
    <string name="next">Next</string>
    <string name="title_activity_donor_dashboard">DonorDashboardActivity</string>
    <string name="title_activity_receiver_dashboard">ReceiverDashboardActivity</string>
    <string name="err_house">Invalid House Number</string>
    <string name="address_info">Address Info</string>
    <string name="donee_name">Donee Name</string>
    <string name="description">Description</string>
    <string name="org_image">Organization Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="request_donation">Request Donation</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="my_request">My Request</string>
    <string name="donee_details">Donee Details</string>
    <string name="donee_id">Donee ID</string>
    <string name="pax">Pax</string>
    <string name="err_pax">Invalid Pax</string>
    <string name="err_contribution">Please fill ONLY one Unit/ KG/ RM field</string>
    <string name="delivery_token">Delivery Token</string>
    <string name="delivery_proof_image">Delivery Proof Image</string>
    <string name="upload_proof_image">Upload Proof Image</string>
    <string name="err_token">Invalid Delivery Token</string>
    <string name="claim_detail">Claim Detail</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="device_token">Device Token</string>
    <string name="contact_info">Contact Info</string>
    <string name="no_record">No Record</string>
    <string name="search_donee">Search Donee</string>

    <string name="eg_name">e.g. John Doe</string>
    <string name="eg_email">e.g. johndoe@gmail.com</string>
    <string name="eg_mobile">e.g. 012-8525897</string>
    <string name="eg_house">e.g. 15</string>
    <string name="eg_street">e.g. Jalan Genting Klang</string>

    <string name="hint_password">At least 6 characters</string>
    <string name="err_same_password">Current password and new password cannot be same</string>
    <string name="remember_me">Remember Me</string>
    <string name="err_time">Please select a time after the current time</string>
    <string name="active">Active</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="inactive">Inactive</string>
    <string name="all">All</string>

    <string-array name="cities">
        <item>Kuala Lumpur</item>
        <item>George Town</item>
        <item>Johor Bahru</item>
        <item>Ipoh</item>
        <item>Shah Alam</item>
        <item>Petaling Jaya</item>
        <item>Malacca City</item>
        <item>Kota Kinabalu</item>
        <item>Kuching</item>
        <item>Alor Setar</item>
        <item>Seremban</item>
        <item>Kuantan</item>
        <item>Taiping</item>
        <item>Sungai Petani</item>
        <item>Miri</item>
        <item>Butterworth</item>
        <item>Sandakan</item>
        <item>Kuala Terengganu</item>
        <item>Muar</item>
        <item>Bintulu</item>
    </string-array>
</resources>