<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDonorNameDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocationDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/tvTimestampDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp" />

        <TextView
            android:id="@+id/tvViewDetailDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_view"
            android:drawablePadding="10dp"
            android:paddingTop="10dp"
            android:text="@string/view_detail" />
    </LinearLayout>

</androidx.cardview.widget.CardView>