<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDoneeNameDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donee_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocationDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/location"
            app:drawableLeftCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvTimestampDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp" />

        <TextView
            android:id="@+id/tvViewDetailDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:paddingTop="10dp"
            android:text="@string/view_detail"
            app:drawableLeftCompat="@drawable/ic_view" />

    </LinearLayout>

</androidx.cardview.widget.CardView>